--- a/test/test1.html
+++ b/test/test1.html
@@ -8,7 +8,7 @@
 
 <script>
 
-var map = new d3.mappu.map('mymap');
+//var map = new d3.mappu.Map('mymap');
 var layer = new d3.mappu.VectorLayer('mylayer',{key:'val'});
 
 </script>
