--- a/test/test1.html
+++ b/test/test1.html
@@ -26,10 +26,10 @@ path {
 var element = document.getElementById('map');
 var map = new d3.mappu.Map(element, {
 
-center: [5,52]
-
+center: [5,52],
+projection: d3.geo.mercator()
 });
-var layer = new d3.mappu.VectorLayer('mylayer',{key:'val'});
+var mylayer = new d3.mappu.VectorLayer('mylayer',{key:'val'});
 
 
 /** Some temporary map background **/
@@ -103,12 +103,12 @@ function zoomed() {
 }*/
 
 
-d3.json("gemeenten_simple.topojson", function(error, us) {
+d3.json("world.json", function(error, topology) {
   if (error) return console.error(error);
  // svg.call(zoom);
   
-  layer._onAdd(map);
-  layer.data = topojson.feature(us, us.objects.gemeenten);
+  mylayer._onAdd(map);
+  mylayer.data = topojson.mesh(topology);
  // zoomed();
 });
 
