--- a/test/test1.html
+++ b/test/test1.html
@@ -17,6 +17,14 @@ path {
   stroke-linejoin: round;
   stroke-width: 1.5px;
 }
+/**
+Layer styling happens in CSS, or in a per-feature function
+**/
+.mylayer {
+    fill: steelBlue;
+    stroke: steelBlue;
+}
+
 </style>
 
 </head>
@@ -24,91 +32,33 @@ path {
 <div id='map'></div>
 <script>
 var element = document.getElementById('map');
+var myprojection = d3.geo.mercator()
+    .scale(6000)
+    .translate([0, 6768 ]);
+
 var map = new d3.mappu.Map(element, {
-
-center: [5,52],
-projection: d3.geo.albers()
+        center: [5,52],
+        projection: myprojection
 });
-var mylayer = new d3.mappu.VectorLayer('mylayer',{key:'val'});
+var mylayer = new d3.mappu.VectorLayer('mylayer',{
+    key:'val',
+    events: [{
+        event: 'mouseover',
+        action: function(){
+            d3.select(this).style('opacity',0.3).transition().style('opacity', 1);
+        }
+    },{
+        event: 'click',
+        action: function(){console.log('Clicked', this);}
+    }]
+});
 
-
-/** Some temporary map background **/
-/*
-var width = Math.max(960, window.innerWidth),
-    height = Math.max(500, window.innerHeight);
-
-var tile = d3.geo.tile()
-    .size([width, height]);
-
-var projection = d3.geo.mercator()
-    .scale((1 << 12) / 2 / Math.PI)
-    .translate([width / 2, height / 2]);
-
-var center = projection([5, 52]);
-
-var path = d3.geo.path()
-    .projection(projection);
-
-var zoom = d3.behavior.zoom()
-    .scale(projection.scale() * 2 * Math.PI)
-    .scaleExtent([1 << 11, 1 << 19])
-    .translate([width - center[0], height - center[1]])
-    .on("zoom", zoomed);
-
-var svg = d3.select("body").append("svg")
-    .attr("width", width)
-    .attr("height", height);
-
-var raster = svg.append("g");
-
-var vector = svg.append("path");*/
-/*
-function zoomed() {
-  var tiles = tile
-      .scale(zoom.scale())
-      .translate(zoom.translate())
-      ();
-
-  projection
-      .scale(zoom.scale() / 2 / Math.PI)
-      .translate(zoom.translate());
-
-  vector
-      .attr("d", path);
-
-  var image = raster
-      .attr("transform", "scale(" + tiles.scale + ")translate(" + tiles.translate + ")")
-    .selectAll("image")
-      .data(tiles, function(d) { return d; });
-
-  image.exit()
-      .remove();
-
-  image.enter().append("image")
-      .attr("xlink:href", function(d) { return "http://" + ["a", "b", "c", "d"][Math.random() * 4 | 0] + ".tiles.mapbox.com/v3/examples.map-i86nkdio/" + d[2] + "/" + d[0] + "/" + d[1] + ".png"; })
-      .attr("width", 1)
-      .attr("height", 1)
-      .attr("x", function(d) { return d[0]; })
-      .attr("y", function(d) { return d[1]; });
-}
-*/
-/** End of temporary map background **/
-
-/** Some workarounds: */
-
-
-//layer.drawboard = vector;
-/*var map = {
-    path: path
-}*/
-
-
-d3.json("world.json", function(error, topology) {
+d3.json("gemeenten_simple.topojson", function(error, data) {
   if (error) return console.error(error);
  // svg.call(zoom);
   
   mylayer._onAdd(map);
-  mylayer.data = topojson.mesh(topology);
+  mylayer.data = topojson.feature(data, data.objects.gemeenten).features;
  // zoomed();
 });
 
