Fixed some references

--- a/test/test1.html
+++ b/test/test1.html
@@ -9,6 +9,8 @@
 <style>
 body {
   margin: 0;
+  width: 100%;
+  height: 100%;
 }
 
 path {
@@ -17,6 +19,11 @@ path {
   stroke-linejoin: round;
   
 }
+#map{
+    width: 100%;
+    height: 100%;
+}
+
 /**
 Layer styling happens in CSS, or in a per-feature function
 **/
