--- a/test/test1.html
+++ b/test/test1.html
@@ -37,7 +37,7 @@ Layer styling happens in CSS, or in a per-feature function
 .coordinates {
     font-size: 8pt;
     position: absolute;
-    top: 2px;
+    bottom: 2px;
     left: 2px;
 }
 
@@ -50,19 +50,11 @@ Layer styling happens in CSS, or in a per-feature function
 
 </head>
 <body>
-<div id='map'>
-</div>
-<div id='coordinates'></div>
+<div id='map'></div>
 
 <script>
-/* TODO: move this to map object */
-var element = document.getElementById('map');
-var tiles;
-var width = window.innerWidth;
-var height = window.innerHeight;
-/* end todo */ 
 
-var map = new d3.mappu.Map(element, {
+var map = new d3.mappu.Map('map', {
         center: [6,52],
         projection: d3.geo.mercator()
         //projection: d3.geo.albers() //future work
@@ -103,13 +95,13 @@ var mylayer = new d3.mappu.VectorLayer('mylayer',{
       },{
         event: 'click',
         action: function(){
-            console.log('Clicked', this);
+            d3.selectAll('.popover').remove();
             var element = document.getElementById('map');
             var loc = d3.mouse(element);
             d3.select('#map').append('div').classed('popover', true)
                 .style('left', loc[0]+'px')
                 .style('top', loc[1]+'px')
-                .html(function(d){return d;});
+                .html('Info goes here....');
         }
     }]
 }).addTo(map);
@@ -124,13 +116,7 @@ d3.json("gemeenten.topojson", function(error, data) {
   if (error) return console.error(error);
   //mylayer.data = topojson.feature(data, data.objects.gemeenten).features;
 });
-/*
-map.svg.on('mousemove', function(e){
-    var loc = d3.mouse(this);
-    var crds = map.projection.invert(loc);
-    d3.select('#coordinates').html('lat: ' + crds[0] + '| lon: ' + crds[1]);
-});
-*/
+
 </script>
 
 </body>
