--- a/test/test1.html
+++ b/test/test1.html
@@ -20,9 +20,20 @@ path {
   stroke-linejoin: round;
   
 }
-#map{
-    width: 100%;
-    height: 100%;
+
+#map {
+  position: relative;
+  margin: 0 auto;
+  overflow: hidden;
+  
+}
+
+.tile {
+  position: absolute;
+}
+
+.tile.loading {
+  display: none;
 }
 
 /**
@@ -51,21 +62,24 @@ Layer styling happens in CSS, or in a per-feature function
 </head>
 <body>
 <div id='map'></div>
+<script src="../src/d3.dev/d3.geo.raster.js"></script>
+<script src="../src/d3.dev/d3.quadtiles.js"></script>
 
 <script>
-
+  
 var map = new d3.mappu.Map('map', {
         center: [6,52],
-        projection: d3.geo.mercator()
-        //projection: d3.geo.albers() //future work
+        zoom: 1,
+        projection: d3.geo.albers()
 });
+
 var coords = new d3.mappu.Coordinates().addTo(map);
 
 var layer = new d3.mappu.RasterLayer('layer1', {
     ogc_type: 'tms',
     url: "http://{s}.tiles.mapbox.com/v3/examples.map-i86nkdio/{z}/{x}/{y}.png"
 }).addTo(map);
-
+/*
 var laag1 = new d3.mappu.RasterLayer('pico:pc6_gas_sjv_verwacht', {
     ogc_type: 'wms',
     url: "http://pico.geodan.nl/geoserver/pico/wms?",
@@ -78,9 +92,8 @@ var laag2 = new d3.mappu.RasterLayer('pico:pico_sjv_sf', {
     url: "/service/pico/geoserver/pico/wms?",
     layers: 'pico:pico_sjv_sf'
 })//.addTo(map);
-map.addLayer(laag2);
-
-
+*/
+    
 //var controllers = d3.mappu.Controllers(map);
 
 var mylayer = new d3.mappu.VectorLayer('mylayer',{
@@ -106,29 +119,22 @@ var mylayer = new d3.mappu.VectorLayer('mylayer',{
         }
     }]
 }).addTo(map);
-
+map.redraw();
 
 d3.json("gemeenten_simple.topojson", function(error, data) {
   if (error) return console.error(error);
-  //mylayer.data = topojson.feature(data, data.objects.gemeenten).features;
+  mylayer.data = topojson.feature(data, data.objects.gemeenten).features;
 });
 
 d3.json("gemeenten.topojson", function(error, data) {
   if (error) return console.error(error);
   //mylayer.data = topojson.feature(data, data.objects.gemeenten).features;
 });
-var w = window,
-    d = document,
-    e = d.documentElement,
-    g = d.getElementsByTagName('body')[0],
-    x = w.innerWidth || e.clientWidth || g.clientWidth,
-    y = w.innerHeight|| e.clientHeight|| g.clientHeight;
-window.addEventListener("resize",function(){
-    x = w.innerWidth || e.clientWidth || g.clientWidth;
-    y = w.innerHeight|| e.clientHeight|| g.clientHeight;
-    map.size = [y,x];
-    map.draw();
-});
+
+
+
+
+
 
 </script>
 
