--- a/test/test1.html
+++ b/test/test1.html
@@ -62,9 +62,10 @@ Layer styling happens in CSS, or in a per-feature function
 </head>
 <body>
 <div id='map'></div>
+<!--
 <script src="../src/d3.dev/d3.geo.raster.js"></script>
 <script src="../src/d3.dev/d3.quadtiles.js"></script>
-
+-->
 <script>
   
 var map = new d3.mappu.Map('map', {
@@ -79,13 +80,13 @@ var layer = new d3.mappu.RasterLayer('layer1', {
     ogc_type: 'tms',
     url: "http://{s}.tiles.mapbox.com/v3/examples.map-i86nkdio/{z}/{x}/{y}.png"
 }).addTo(map);
-/*
+
 var laag1 = new d3.mappu.RasterLayer('pico:pc6_gas_sjv_verwacht', {
     ogc_type: 'wms',
-    url: "http://pico.geodan.nl/geoserver/pico/wms?",
-    layers: 'pico:pc6_gas_sjv_verwacht'
-})//.addTo(map);
-
+    url: "http://geodata.nationaalgeoregister.nl/kadastralekaart/wms?",
+    layers: 'grens'
+}).addTo(map);
+/*
 var laag2 = new d3.mappu.RasterLayer('pico:pico_sjv_sf', {
     ogc_type: 'wms',
     //url: "http://pico.geodan.nl/geoserver/pico/wms?",
@@ -123,7 +124,7 @@ map.redraw();
 
 d3.json("gemeenten_simple.topojson", function(error, data) {
   if (error) return console.error(error);
-  mylayer.data = topojson.feature(data, data.objects.gemeenten).features;
+  //mylayer.data = topojson.feature(data, data.objects.gemeenten).features;
 });
 
 d3.json("gemeenten.topojson", function(error, data) {
