--- a/test/test1.html
+++ b/test/test1.html
@@ -8,7 +8,7 @@
 <script src="../dist/d3.mappu.js"></script>
 
 <style>
-body {
+html, body {
   margin: 0;
   width: 100%;
   height: 100%;
@@ -21,12 +21,32 @@ path {
   
 }
 
+#header {
+	position: relative;
+	height: 10%;
+	width: 100%;
+	background: green;
+}
+
+#content {
+	position: relative;
+	height: 90%;
+	width: 100%;
+}
+#leftbar {
+	position: absolute;
+	height: 100%;
+	width: 100px;
+	background: red;
+}
+
 #map {
-  position: relative;
+  position: absolute;
   margin: 0 auto;
   overflow: hidden;
+  left: 100px;
   height: 100%;
-  width: 100%;
+  right: 0px;
 }
 
 .tile {
@@ -62,7 +82,11 @@ Layer styling happens in CSS, or in a per-feature function
 
 </head>
 <body>
-<div id='map'></div>
+<div id="header">Header</div>
+<div id="content">
+	<div id="leftbar">leftbar</div>
+	<div id='map'></div>
+</div>
 <!--
 <script src="../src/d3.dev/d3.geo.raster.js"></script>
 <script src="../src/d3.dev/d3.quadtiles.js"></script>
