--- a/test/test1.html
+++ b/test/test1.html
@@ -125,7 +125,7 @@ var laag2 = new d3.mappu.RasterLayer('pico:pico_sjv_sf', {
 //var controllers = d3.mappu.Controllers(map);
 
 var mylayer = new d3.mappu.VectorLayer('mylayer',{
-    reproject: false,
+    reproject: true,
     events: [{
         event: 'mouseover',
         action: function(){
