--- a/test/test1.html
+++ b/test/test1.html
@@ -95,9 +95,9 @@ Layer styling happens in CSS, or in a per-feature function
   
 var map = new d3.mappu.Map('map', {
         center: [6,52],
-        zoom: 22,
-        minZoom: 1,
-        maxZoom: 26,
+        zoom: 18,
+        minZoom: 18,
+        maxZoom: 18,
         projection: d3.geo.mercator()
 });
 
@@ -153,10 +153,10 @@ d3.json('us.json', function(error, data){
 		map.redraw();
 });
 */
-d3.json("gemeenten_simple.topojson", function(error, data) {
+d3.json("provincie_4326.topojson", function(error, data) {
   if (error) return console.error(error);
   var counter = 0;
-  var feats = topojson.feature(data, data.objects.gemeenten).features;
+  var feats = topojson.feature(data, data.objects.provincie_4326).features;
   feats.forEach(function(d){
 		  d.id = 'id' + counter++;
   });
