First working version with esri raster service

--- a/test/test1.html
+++ b/test/test1.html
@@ -94,7 +94,7 @@ Layer styling happens in CSS, or in a per-feature function
 <script>
   
 var map = new d3.mappu.Map('map', {
-        center: [6,52],
+        center: [-118.184051,33.999622],
         zoom: 18,
         minZoom: 10,
         maxZoom: 24,
@@ -107,6 +107,25 @@ var layer = new d3.mappu.RasterLayer('layer1', {
     ogc_type: 'tms',
     url: "http://{s}.tiles.mapbox.com/v3/examples.map-i86nkdio/{z}/{x}/{y}.png",
     opacity: 0.2
+}).addTo(map);
+
+//var wmslayer = new d3.mappu.RasterLayer('wms1',{
+//	ogc_type: 'wms',
+//	url: "http://worldmap.harvard.edu/geoserver/wms",
+//	layers: "geonode:_census_2zo",
+//	opacity:1
+//}).addTo(map);
+
+//var esrilayer = new d3.mappu.RasterLayer('esrilayer1', {
+//    ogc_type: 'esri',
+//    url: "http://gis-server-01.usc.edu:6080/arcgis/rest/services/Los_Angeles_Region_Contours/MapServer/export",
+//    opacity: 1
+//}).addTo(map);
+//
+var esrilayer = new d3.mappu.RasterLayer('esrilayer2', {
+    ogc_type: 'esri',
+    url: "http://egis3.lacounty.gov/arcgis/rest/services/Geography/simpleGeo/MapServer/export",
+    opacity: 1
 }).addTo(map);
 
 /*
