Adding new interpoints continues with drag now

--- a/test/test1.html
+++ b/test/test1.html
@@ -122,11 +122,11 @@ var layer = new d3.mappu.RasterLayer('layer1', {
 //    opacity: 1
 //}).addTo(map);
 //
-var esrilayer = new d3.mappu.RasterLayer('esrilayer2', {
-    ogc_type: 'esri',
-    url: "http://egis3.lacounty.gov/arcgis/rest/services/Geography/simpleGeo/MapServer/export",
-    opacity: 1
-}).addTo(map);
+//var esrilayer = new d3.mappu.RasterLayer('esrilayer2', {
+//    ogc_type: 'esri',
+//    url: "http://egis3.lacounty.gov/arcgis/rest/services/Geography/simpleGeo/MapServer/export",
+//    opacity: 1
+//}).addTo(map);
 
 /*
 var laag2 = new d3.mappu.RasterLayer('pico:pico_sjv_sf', {
