--- a/test/test1.html
+++ b/test/test1.html
@@ -79,7 +79,16 @@ Layer styling happens in CSS, or in a per-feature function
 }
 
 .minor_road{
+	stroke: gray;
+	stroke-width: 1px;
+}
+.major_road{
+	stroke: orange;
+	stroke-width: 2px;
+}
+.highway {
 	stroke: yellow;
+	stroke-width: 4px;
 }
 
 </style>
@@ -110,6 +119,7 @@ var map = new d3.mappu.Map('map', {
 var layer = new d3.mappu.RasterLayer('layer1', {
     ogc_type: 'tms',
     url: "http://{s}.tiles.mapbox.com/v3/examples.map-i86nkdio/{z}/{x}/{y}.png",
+    
     opacity: 1
 }).addTo(map);
 
@@ -168,6 +178,12 @@ var mylayer = new d3.mappu.VectorLayer('mylayer',{
 }).addTo(map);
 
 var vectortileLayer = new d3.mappu.VectorTileLayer('vtile',{
+		//url: "http://{s}.tile.openstreetmap.us/vectiles-highroad/{z}/{x}/{y}.json",
+		url: "http://vector.mapzen.com/osm/roads/{z}/{x}/{y}.json?api_key=vector-tiles--R28NDY",
+		style:{
+			stroke: 'blue',
+			'stroke-width': '1px'
+		}
 }).addTo(map);
 
 /*
