--- a/test/test1.html
+++ b/test/test1.html
@@ -51,10 +51,8 @@ path {
 
 .tile {
   position: absolute;
-  border: 1px solid black;
   width: 256px;
   height: 256px;
-  font-size: 8pt;
 }
 
 .tile.loading {
@@ -93,6 +91,11 @@ Layer styling happens in CSS, or in a per-feature function
 .highway {
 	stroke: yellow;
 	stroke-width: 4px;
+}
+
+.entityundefined {
+	stroke: solid orange 2px;
+	
 }
 
 #debug {
@@ -175,9 +178,17 @@ var mylayer = new d3.mappu.VectorLayer('mylayer',{
         			map.redraw();
         		})
         }
+    },{
+    event: 'mouseover',
+        action: function(){
+            var opac = d3.select(this).style('opacity');
+            var fill = d3.select(this).style('fill');
+            d3.select(this).style('opacity',0.3).style('fill','#FF0033')
+                .transition().style('opacity', opac).style('fill',fill);
+        }
     }]
     /*
-    events: [{
+    ,events: [{
         event: 'mouseover',
         action: function(){
             var opac = d3.select(this).style('opacity');
@@ -185,7 +196,7 @@ var mylayer = new d3.mappu.VectorLayer('mylayer',{
             d3.select(this).style('opacity',0.3).style('fill','#FF0033')
                 .transition().style('opacity', opac).style('fill',fill);
         }
-      },{
+      /*,{
         event: 'click',
         action: function(){
             d3.selectAll('.popover').remove();
@@ -201,7 +212,7 @@ var mylayer = new d3.mappu.VectorLayer('mylayer',{
 
 
 
-/*
+
 var vectortileLayer = new d3.mappu.VectorTileLayer('vtile',{
 		//url: "http://{s}.tile.openstreetmap.us/vectiles-highroad/{z}/{x}/{y}.json",
 		url: "http://vector.mapzen.com/osm/roads/{z}/{x}/{y}.json?api_key=vector-tiles--R28NDY",
@@ -209,7 +220,7 @@ var vectortileLayer = new d3.mappu.VectorTileLayer('vtile',{
 			stroke: 'blue',
 			'stroke-width': '1px'
 		}
-}).addTo(map);
+}).addTo(map);/*
 var mysketch = new d3.mappu.Sketch('sketch1', {
 }).addTo(map);
 var counter = 0;
@@ -235,8 +246,8 @@ d3.json("provincie_4326.topojson", function(error, data) {
 		  d.id = 'id' + counter++;
   });
   mylayer.data = feats;
-});
-
+});*/
+/*
 d3.json("gemeenten.topojson", function(error, data) {
   if (error) return console.error(error);
   //mylayer.data = topojson.feature(data, data.objects.gemeenten).features;
