--- a/test/twkb.html
+++ b/test/twkb.html
@@ -3,6 +3,7 @@
 <head>
 <meta http-equiv="content-type" content="text/html; charset=UTF8">
 <script src="../bower_components/d3/d3.js" charset="utf-8"></script>
+<script src="../libs/colorbrewer.js" charset="utf-8"></script>
 <script src="../bower_components/topojson/topojson.js"></script>
 <script src="../bower_components/d3-plugins/geo/tile/tile.js"></script>
 <script src="../dist/d3.mappu.js"></script>
@@ -30,15 +31,17 @@ path {
 }
 
 #content {
-	position: relative;
-	height: 90%;
-	width: 100%;
+	position: absolute;
+	left: 100px;
+	top: 0px;
+	height: 100%;
+	width: 90%;
 }
 #leftbar {
 	position: absolute;
 	height: 100%;
 	width: 100px;
-	background: red;
+	background: grey;
 }
 
 #map {
@@ -52,6 +55,8 @@ path {
 
 .tile {
   position: absolute;
+  width: 256px;
+  height: 256px;
 }
 
 .tile.loading {
@@ -130,9 +135,10 @@ Layer styling happens in CSS, or in a per-feature function
 
 </head>
 <body>
-<div id="header">Header</div>
+<div id="leftbar">
+
+</div>
 <div id="content">
-	<div id="leftbar">leftbar</div>
 	<div id='map'></div>
 </div>
 <!--
@@ -140,78 +146,80 @@ Layer styling happens in CSS, or in a per-feature function
 <script src="../src/d3.dev/d3.quadtiles.js"></script>
 -->
 <script>
-  
+var colors = [];
+for (var foo in colorbrewer){ colors.push(foo);}
+
+var inputs = d3.select('#leftbar').selectAll('.input').data(colors).enter().append('span');
+inputs.append('input').attr('name',"color").attr('type',"radio").attr('value',"redblue")
+	.on('click',function(d){
+			var style = twkblayer.style;
+			style.fill = d3.scale.linear()
+						.range(colorbrewer[d][3])
+						.domain([1600,1945,2020]);
+			style.stroke = d3.scale.linear()
+						.range(colorbrewer[d][3])
+						.domain([1600,1945,2020]);
+			twkblayer.style = style;
+	});
+inputs.insert('span').html(function(d){
+	return d;
+});
+inputs.append('br');
+
 var map = new d3.mappu.Map('map', {
         //center: [-118.184051,33.999622],
         center: [4.491046,52.159088],
-        zoom: 26,
+        zoom: 24,
         minZoom: 10,
         maxZoom: 28,
         projection: d3.geo.mercator()
 });
-/*
+
 var layer = new d3.mappu.RasterLayer('layer1', {
     ogc_type: 'tms',
-    url: 'https://{s}.tiles.mapbox.com/v4/mapbox.streets/{z}/{x}/{y}.png?access_token=pk.eyJ1IjoibWFwYm94IiwiYSI6ImNpamVuY3cxbzAwMG12ZGx4cGljbGtqMGUifQ.vpDqms08MBqoRgp667Yz5Q',
+    url: 'http://{s}.basemaps.cartocdn.com/light_nolabels/{z}/{x}/{y}.png',
+
+    //url: 'https://{s}.tiles.mapbox.com/v4/mapbox.streets/{z}/{x}/{y}.png?access_token=pk.eyJ1IjoibWFwYm94IiwiYSI6ImNpamVuY3cxbzAwMG12ZGx4cGljbGtqMGUifQ.vpDqms08MBqoRgp667Yz5Q',
     opacity: 1
 }).addTo(map);
 
-var mylayer = new d3.mappu.VectorLayer('mylayer',{
-    reproject: false,
-    style: {
-    	fill: 'red',
-    },
-}).addTo(map);
-*/
-/*
-var vectortileLayer = new d3.mappu.VectorTileLayer('vtile',{
-		url: "http://vector.mapzen.com/osm/roads/{z}/{x}/{y}.json?api_key=vector-tiles--R28NDY",
-		style:{
-			stroke: 'blue',
-			'stroke-width': '1px'
-		}
-}).addTo(map);
-*/
-var twkblayer = new d3.mappu.TWKBLayer('twkblayer',{
+var twkblayer = new d3.mappu.TWKBLayer('panden',{
     url: 'http://192.168.40.2:8080/data?',
-    layers: 'polygons',
-    id_column: 'ogc_fid',
-    attributes: ['class'],
-    classproperty: 'class'
+    usecache: true,
+    //query: 'SELECT aobjectid id, gebrksdoel, geom FROM bagagn_201501.adressen',  
+    layers: 'bagagn_201501.gebouwen',
+    id_column: 'gebwbagid',
+    geom_column: 'geom',
+    attributes: ['bouwjaar'],
+    style: {
+    	column: 'bouwjaar',
+    	fill:
+    		d3.scale.linear()
+						.range(['black','grey','steelBlue'])
+						.domain([1600,1945,2020]),
+			stroke:
+				d3.scale.linear()
+						.range(['black','grey','steelBlue'])
+						.domain([1600,1945,2020]) 
+    }
 }).addTo(map);
 
 /*
-var twkblayer = new d3.mappu.TWKBLayer('twkblayer',{
+var twkblayer = new d3.mappu.TWKBLayer('adressen',{
     url: 'http://192.168.40.2:8080/data?',
-    layers: 'terrein_vlak',
-    style:{
-			stroke: 'green',
-			'stroke-width': '1px'
-		}
+    //query: 'SELECT aobjectid id, gebrksdoel, geom FROM bagagn_201501.adressen',  
+    layers: 'bagagn_201501.adressen',
+    id_column: 'aobjectid',
+    geom_column: 'geom',
+    attributes: ['gebrksdoel'],
+    style: {
+    	column: 'gebrksdoel',
+    	fill:d3.scale.category20(), 
+			stroke:'white'
+    }
 }).addTo(map);
 */
-var counter = 0;
-var buildings = [];
-function get_buildings(){
-	 	d3.json('http://192.168.40.2:8080/data?bbox=555259,6825954,575818,6842245',function(error,result){
-	 		result.features.forEach(function(d){
-				if(typeof(d.geom.data) == 'object') //ArrayBuffer? ok, then it is our geometry comming
-				{
-					var arr = new Uint8Array(d.geom.data);
-					 var g = new twkb.toGeoJSON(arr);
-						g.features.forEach(function(d){
-								d.id = counter++;
-								buildings.push(d);
-						});
-				}
-				else {
-					//TODO: add this to feature props
-					//console.log(event.data);
-				}
-			});
-			mylayer.data = buildings;
-		});
-}
+
 
 
 
