More work on twkb layer Fixed style for raster tyles

--- a/test/test1.html
+++ b/test/test1.html
@@ -133,7 +133,7 @@ var map = new d3.mappu.Map('map', {
 
 var layer = new d3.mappu.RasterLayer('layer1', {
     ogc_type: 'tms',
-    url: 'https://{s}.tiles.mapbox.com/v4/mapbox.streets/{z}/{x}/{y}.png?access_token=pk.eyJ1IjoibWFwYm94IiwiYSI6ImNpamVuY3cxbzAwMG12ZGx4cGljbGtqMGUifQ.vpDqms08MBqoRgp667Yz5Q',
+    url: 'http://{s}.basemaps.cartocdn.com/light_nolabels/{z}/{x}/{y}.png',
     opacity: 1
 }).addTo(map);
 
