--- a/test/twkb.html
+++ b/test/twkb.html
@@ -42,6 +42,7 @@ path {
 	height: 100%;
 	width: 100px;
 	background: grey;
+	overflow: auto;
 }
 
 #map {
@@ -63,78 +64,29 @@ path {
   display: none;
 }
 
-/**
-Layer styling happens in CSS, or in a per-feature function
-**/
-.mylayer {
-    fill: steelBlue;
-    fill-opacity: 0.4;
-    stroke: steelBlue;
-}
-
-.coordinates {
-    font-size: 8pt;
-    position: absolute;
-    bottom: 2px;
-    left: 2px;
-}
-
-.popover {
+#dialog {
     position: absolute;
     background: white;
+    left: 30%;
+    right: 30%;
+    top: 20%;
+    bottom: 20%;
+    z-index: 101;
+    display: none;
 }
 
-.minor_road{
-	stroke: gray;
-	stroke-width: 1px;
-}
-.major_road{
-	stroke: orange;
-	stroke-width: 2px;
-}
-.highway {
-	stroke: yellow;
-	stroke-width: 4px;
-}
-
-.water {
-	fill: steelBlue;
-	stroke: steelBlue;
-	stroke-width: 1px;
-}
-.road {
-	fill: gray;
-	stroke: gray;
-	stroke-width: 1px;
-}
-
-.building {
-	fill: lightgrey;
-	stroke: #ccccff;
-}
-
-.plantcover {
-	fill: green;
-	stroke: green;
-	stroke-width: 1px;
-}
-
-.bare {
-	fill: #ffcc99;
-	stroke: #ffcc99;
-	stroke-width: 1px;
-}
-
-.border {
-	fill: #ccccff;
-	stroke: #ccccff;
-	stroke-width: 1px;
-}
 
 </style>
 
 </head>
 <body>
+<div id="dialog">
+	<h2 id="tablename"></h2>
+	<p>
+		<span id="tableinfo"></span>
+		<button id="addtable">Voeg toe</button>
+	</p>
+</div>
 <div id="leftbar">
 
 </div>
@@ -146,9 +98,9 @@ Layer styling happens in CSS, or in a per-feature function
 <script src="../src/d3.dev/d3.quadtiles.js"></script>
 -->
 <script>
+/* COLORBREWER 
 var colors = [];
 for (var foo in colorbrewer){ colors.push(foo);}
-
 var inputs = d3.select('#leftbar').selectAll('.input').data(colors).enter().append('span');
 inputs.append('input').attr('name',"color").attr('type',"radio").attr('value',"redblue")
 	.on('click',function(d){
@@ -165,11 +117,70 @@ inputs.insert('span').html(function(d){
 	return d;
 });
 inputs.append('br');
-
+*/
+var twkblayer;
+d3.json('http://192.168.40.2:8080/data?request=getCapabilities',function(e,result){
+		if (e){
+			console.error(e);
+		}
+		var tables = d3.select('#leftbar').selectAll('.table').data(result.data)
+			.enter().append('div').classed('table',true);
+		tables.html(function(d){
+				return d.table;
+		});
+		tables.on('click',function(d){
+				 d3.select('#dialog').style('display','block');
+				 d3.json('http://192.168.40.2:8080/data?request=getCapabilities&schema='+d.schema+'&table='+d.table,function(e,result){
+						if (e){
+							console.error(e);
+						}
+						var tabledata = result.data;
+						d3.select('#tableinfo').selectAll('div').remove();
+						d3.select('#tableinfo').selectAll('div').data(tabledata)
+							.enter().append('div').html(function(d){
+									var radio = '';
+									var id = '';
+									if (d.udt_name == 'int4' || d.udt_name == 'float8'){
+										radio = '<input type="radio" name="stylecol" value="'+d.column_name+'">';
+									}
+									id = '<input type="radio" name="idcol" value="'+d.column_name+'">';
+									return id + radio + '<b>' + d.column_name + '</b>' + d.udt_name;
+							});					
+				 });
+				 d3.select('#addtable').on('click',function(){
+				 		 d3.select('#dialog').style('display','none');
+				 		 var stylecol = d3.select('input[name="stylecol"]:checked').node().value;
+				 		 var idcol = d3.select('input[name="idcol"]:checked').node().value;
+				 		 
+				 		 //map.removeLayer(twkblayer);
+				 		 twkblayer = new d3.mappu.TWKBLayer(d.table,{
+								url: 'http://192.168.40.2:8080/data?',
+								usecache: true,
+								layers: d.schema+'.'+d.table,
+								id_column: idcol,
+								geom_column: d.geomcol,
+								srid: d.srid,
+								attributes: [stylecol],
+								style: {
+									column: stylecol,
+									fill:
+										d3.scale.linear()
+												.range(['black','grey','steelBlue'])
+												.domain([0,50,100]),
+									stroke:
+										d3.scale.linear()
+												.range(['black','grey','steelBlue'])
+												.domain([0,50,100]) 
+								}
+						}).addTo(map);
+				 });
+				 
+		});
+})
 var map = new d3.mappu.Map('map', {
         //center: [-118.184051,33.999622],
         center: [4.491046,52.159088],
-        zoom: 24,
+        zoom: 22,
         minZoom: 10,
         maxZoom: 28,
         projection: d3.geo.mercator()
@@ -187,30 +198,32 @@ var twkblayer = new d3.mappu.TWKBLayer('panden',{
     url: 'http://192.168.40.2:8080/data?',
     usecache: true,
     //query: 'SELECT aobjectid id, gebrksdoel, geom FROM bagagn_201501.adressen',  
-    layers: 'bagagn_201501.gebouwen',
-    id_column: 'gebwbagid',
-    geom_column: 'geom',
-    attributes: ['bouwjaar'],
+    layers: 'brt_201402.wegdeel_vlak',
+    id_column: 'ogc_fid',
+    geom_column: 'wkb_geometry',
+    srid: 28992,
+    attributes: ['visualisatiecode'],
     style: {
-    	column: 'bouwjaar',
+    	column: 'visualisatiecode',
     	fill:
     		d3.scale.linear()
 						.range(['black','grey','steelBlue'])
-						.domain([1600,1945,2020]),
+						.domain([0,50,100]),
 			stroke:
 				d3.scale.linear()
 						.range(['black','grey','steelBlue'])
-						.domain([1600,1945,2020]) 
+						.domain([0,50,100]) 
     }
 }).addTo(map);
-
 /*
 var twkblayer = new d3.mappu.TWKBLayer('adressen',{
     url: 'http://192.168.40.2:8080/data?',
+    usecache: true,
     //query: 'SELECT aobjectid id, gebrksdoel, geom FROM bagagn_201501.adressen',  
     layers: 'bagagn_201501.adressen',
     id_column: 'aobjectid',
     geom_column: 'geom',
+    srid: 28992,
     attributes: ['gebrksdoel'],
     style: {
     	column: 'gebrksdoel',
