--- a/test/d3v4.html
+++ b/test/d3v4.html
@@ -1,10 +1,22 @@
 <html>
 <head>
-<script src="https://d3js.org/d3.v4.0.0-alpha.50.js"></script>
+<script src="https://d3js.org/d3.v4.min.js"></script>
+<script src="//d3js.org/d3-tile.v0.0.min.js"></script>
+<script src="//d3js.org/topojson.v1.min.js"></script>
+<script src="../dist/d3.mappu.js"></script>
+
 <!--
 <script src="https://d3js.org/d3-array.v1.min.js"></script>
 <script src="https://d3js.org/d3-geo.v0.0.min.js"></script>
 -->
+
+<style>
+#map{
+	width: 600px;
+	height: 600px;
+	background: steelBlue;
+}
+</style>
 <script>
 
 var geojson = {
@@ -31,5 +43,23 @@ console.log(path.area(geojson));
 </script>
 </head>
 <body>
+<div id='map'></div>
+
+<script>
+var mapdiv= d3.select('#map').node();
+var map = new d3.mappu.Map(mapdiv, {
+        center: [5.2,52.2],
+        zoom: 14,
+        minZoom: 10,
+        maxZoom: 24,
+        projection: d3.geoMercator()
+});
+var layer = new d3.mappu.RasterLayer('layer1', {
+    ogc_type: 'tms',
+    url: "http://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png"
+    
+}).addTo(map);
+</script>
+
 </body>
 </html>
