--- a/test/d3v4.html
+++ b/test/d3v4.html
@@ -12,10 +12,24 @@
 
 <style>
 #map{
-	width: 600px;
-	height: 600px;
-	background: steelBlue;
+	width: 100%;
+	height: 100%;
+	background: ivory;
 }
+
+.tile {
+  position: absolute;
+  width: 256px;
+  height: 256px;
+}
+
+.tile path {
+  fill: none;
+  stroke: #000;
+  stroke-linejoin: round;
+  stroke-linecap: round;
+}
+
 </style>
 <script>
 
@@ -49,25 +63,38 @@ console.log(path.area(geojson));
 var mapdiv= d3.select('#map').node();
 var map = new d3.mappu.Map(mapdiv, {
         center: [5.2,52.2],
-        zoom: 14,
+        zoom: 22,
         minZoom: 10,
-        maxZoom: 26,
+        maxZoom: 30,
         projection: d3.geoMercator()
 });
+/*
 var layer = new d3.mappu.RasterLayer('layer1', {
     ogc_type: 'tms',
-    url: "http://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png"
+    //url: "http://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png"
+    url: "http://tile.stamen.com/toner/{z}/{x}/{y}.png"
     
 }).addTo(map);
+*/
 /*
 var mylayer = new d3.mappu.VectorLayer('mylayer',{
     reproject: false,
     style: {
         fill: 'none',
-        stroke: 'red'
+        stroke: 'steelBlue'
     }
+    ,events: [{
+        event: 'mouseover',
+        action: function(){
+            var opac = d3.select(this).style('opacity');
+            var fill = d3.select(this).style('fill');
+            d3.select(this).style('opacity',0.3).style('fill','#FF0033')
+                .transition().style('opacity', opac).style('fill',fill);
+        }
+    }]
 }).addTo(map);
-
+*/
+/*
 d3.json("provincie_4326.topojson", function(error, data) {
   if (error) return console.error(error);
   var counter = 0;
@@ -78,6 +105,22 @@ d3.json("provincie_4326.topojson", function(error, data) {
   mylayer.data = feats;
 });
 */
+/*
+d3.json("gemeenten.topojson", function(error, data) {
+  if (error) return console.error(error);
+  mylayer.data = topojson.feature(data, data.objects.gemeenten).features;
+});
+*/
+
+var vectortileLayer = new d3.mappu.VectorTileLayer('vtile',{
+		//url: "http://{s}.tile.openstreetmap.us/vectiles-highroad/{z}/{x}/{y}.json",
+		url: "http://vector.mapzen.com/osm/roads/{z}/{x}/{y}.json?api_key=vector-tiles--R28NDY",
+		style:{
+			stroke: 'blue',
+			'stroke-width': '1px'
+		}
+}).addTo(map);
+
 </script>
 
 </body>
