--- a/test/d3v4.html
+++ b/test/d3v4.html
@@ -2,7 +2,7 @@
 <head>
 <script src="https://d3js.org/d3.v4.min.js"></script>
 <script src="//d3js.org/d3-tile.v0.0.min.js"></script>
-<script src="//d3js.org/topojson.v.min.js"></script>
+<script src="//d3js.org/topojson.v2.min.js"></script>
 <script src="../dist/d3.mappu.js"></script>
 
 <!--
@@ -121,22 +121,13 @@ d3.json("gemeenten.topojson", function(error, data) {
 
 var vectortileLayer = new d3.mappu.VectorTileLayer('vtile',{
 		//url: "http://{s}.tile.openstreetmap.us/vectiles-highroad/{z}/{x}/{y}.json",
-		//url: "http://vector.mapzen.com/osm/roads/{z}/{x}/{y}.json?api_key=vector-tiles--R28NDY",
-		tms: true,
-		url: "http://192.168.40.8:3389/geoserver/gwc/service/tms/1.0.0/research%3Apand@World_3857@geojson/{z}/{x}/{y}.topojson",
-		style:{
+		url: "http://tile.mapzen.com/mapzen/vector/v1/roads/{z}/{x}/{y}.topojson?api_key=vector-tiles--R28NDY",
+		//url: "http://192.168.40.8:3389/geoserver/gwc/service/tms/1.0.0/research%3Apand@World_3857@geojson/{z}/{x}/{y}.topojson",
+		layername: 'roads',
+		style: {
 			stroke: 'blue',
 			'stroke-width': '1px'
-		},
-		events: [{
-			event: 'mouseover',
-			action: function(){
-				var opac = d3.select(this).style('opacity');
-				var stroke = d3.select(this).style('stroke');
-				d3.select(this).style('opacity',0.3).style('stroke','#FF0033')
-					.transition().style('opacity', opac).style('stroke',stroke);
-			}
-		}]
+		}
 }).addTo(map);
 
 </script>
