--- a/test/d3v4.html
+++ b/test/d3v4.html
@@ -3,6 +3,8 @@
 <script src="https://d3js.org/d3.v4.min.js"></script>
 <script src="//d3js.org/d3-tile.v0.0.min.js"></script>
 <script src="//d3js.org/topojson.v2.min.js"></script>
+<script src="https://cdn.rawgit.com/devTristan/pbf/master/dist/pbf.min.js"></script>
+<script src="https://rawgit.com/devTristan/vector-tile-js/master/dist/vectortile.min.js"></script>
 <script src="../dist/d3.mappu.js"></script>
 
 <!--
@@ -118,17 +120,59 @@ d3.json("gemeenten.topojson", function(error, data) {
   mylayer.data = topojson.feature(data, data.objects.gemeenten).features;
 });
 */
-
+/*
 var vectortileLayer = new d3.mappu.VectorTileLayer('vtile',{
 		//url: "http://{s}.tile.openstreetmap.us/vectiles-highroad/{z}/{x}/{y}.json",
-		url: "http://tile.mapzen.com/mapzen/vector/v1/roads/{z}/{x}/{y}.topojson?api_key=vector-tiles--R28NDY",
+		//url: "http://tile.mapzen.com/mapzen/vector/v1/roads/{z}/{x}/{y}.topojson?api_key=vector-tiles--R28NDY",
 		//url: "http://192.168.40.8:3389/geoserver/gwc/service/tms/1.0.0/research%3Apand@World_3857@geojson/{z}/{x}/{y}.topojson",
-		layername: 'roads',
+		url: "http://localhost:3001/bgt/pand_2d/{z}/{x}/{y}.mvt",
+		layername: 'pand_2d',
 		style: {
-			stroke: 'blue',
-			'stroke-width': '1px'
+			fill: '#ff69b4',
+			stroke: '#ff99e4',
 		}
 }).addTo(map);
+var vectortileLayer = new d3.mappu.VectorTileLayer('vtile',{
+		url: "http://localhost:3001/bgt/waterdeel_2d/{z}/{x}/{y}.mvt",
+		layername: 'waterdeel_2d',
+		style: {
+			fill: 'steelBlue',
+			stroke: 'steelBlue'
+		}
+}).addTo(map);
+var vectortileLayer = new d3.mappu.VectorTileLayer('vtile',{
+		url: "http://localhost:3001/bgt/wegdeel_2d/{z}/{x}/{y}.mvt",
+		layername: 'wegdeel_2d',
+		style: {
+			fill: 'grey',
+			stroke: 'grey'
+		}
+}).addTo(map);
+var vectortileLayer = new d3.mappu.VectorTileLayer('vtile',{
+		url: "http://localhost:3001/bgt/ondersteunendwegdeel_2d/{z}/{x}/{y}.mvt",
+		layername: 'ondersteunendwegdeel_2d',
+		style: {
+			fill: 'grey',
+			stroke: 'grey'
+		}
+}).addTo(map);
+var vectortileLayer = new d3.mappu.VectorTileLayer('vtile',{
+		url: "http://localhost:3001/bgt/begroeidterreindeel_2d/{z}/{x}/{y}.mvt",
+		layername: 'begroeidterreindeel_2d',
+		style: {
+			fill: 'green',
+			stroke: 'green'
+		}
+}).addTo(map);*/
+var vectortileLayer = new d3.mappu.VectorTileLayer('vtile',{
+		url: "http://localhost:3001/bgt/onbegroeidterreindeel_2d/{z}/{x}/{y}.mvt",
+		layername: 'onbegroeidterreindeel_2d',
+		style: {
+			"fill": 'red',
+			"stroke": 'red'
+		}
+}).addTo(map);
+
 
 </script>
 
